<resources>
    <!-- App parameter -->
    <string name="app_name">Smart Manager Agent</string>

    <!-- CalendarActivity -->
    <string name="title_calendar_activity">My calendar</string>
    <string name="text_time_slot_button">Configure time slots</string>
    <string name="connected">Connected as&#160;</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="validate_name">Validate</string>
    <string name="refuse">Refuse</string>
    <string name="error_name">Please enter a valide username</string>
    <string name="from">&#160;from&#160;</string>
    <string name="to">&#160;to&#160;</string>
    <string name="with">With&#160;</string>

    <!-- MeetingsActivity -->
    <string name="title_meetings_activity">My meetings</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="time_separator">&#160;at&#160;</string>

    <!-- MeetingAddActivity -->
    <string name="title_meeting_add_activity">Add a new meeting</string>
    <string name="meeting_description">Meeting title</string>
    <string name="meeting_description_hint">I have a meeting in order to…</string>
    <string name="meeting_start">First day of availability</string>
    <string name="meeting_end">Last day of availability</string>
    <string name="asap">As soon as possible</string>
    <string name="attendees">Meeting attendees</string>
    <string name="date_error_after">The ending date must be scheduled after the beginning date</string>
    <string name="date_error_before">The beginning date must be scheduled before the ending date</string>
    <string name="field_error">Please fill all fields before validate</string>
    <string name="duree">Duration</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="meeting_attendees_hint">Pierre, Marie…</string>

    <!-- WeeklyFreeTimeActivity -->
    <string name="fill_out_free_time">Please tell us when you have free time during the week</string>
    <string name="no_meeting">No meeting</string>
    <string name="beginning">Beginning</string>
    <string name="end">End</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Menu -->
    <string name="about">About us</string>
    <string name="refresh_display">Refresh display</string>
    <string name="validate">Validate</string>
    <string name="warning">Disabled features of this screen have yet to be implemented</string>

    <!-- CommunicationService -->
    <string name="notif_txt">You have a pending meeting to validate</string>
    <string name="accepted">Your meeting has been accepted</string>

    <!-- About -->
    <string name="about_txt">We are 6 French students from the Université du Québec à Chicoutimi…</string>
    <string name="license1">SmartManagerAgent License</string>
    <string name="license2">Caldroid License</string>
    <string name="license_txt1">MIT License

Copyright © 2017 Nicolas Gilbert, Lucas Bousselet, Maxime Arbelot, Clément Rigondaud, Nicolas Chabalier, Jérémy Spieldenner.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="license_txt2">Available for use under the MIT License

Copyright © 2013 by Roomorama Inc.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>

</resources>
